Fix colophon spacing for mobile

--- a/resources/assets/styles/layouts/_footer.scss
+++ b/resources/assets/styles/layouts/_footer.scss
@@ -262,6 +262,8 @@ footer {
 
   @media (max-width: 500px) {
     flex-direction: column;
+    height: auto;
+    padding: 2rem 0;
 
     * {
       margin: 0.5rem 0;
